# nesemul

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh
exe/: main.cpp
include/: bus.h  cpu.h  image.h  ops.h  ppu.h  ram.h  sdl_renderer.h  types.h
src/: apu.cpp  apu.h  battery.cpp  battery.h  bus.cpp  bus.h  cartridge.cpp  cartridge.h  clock.cpp  clock.h  controller.cpp  controller.h  cpu.cpp  cpu.h  debugger.cpp  debugger.h  disassembler.cpp  disassembler.h  emulator.cpp  emulator.h  image.h  ines.cpp  ines.h  main.cpp  mapper.cpp  mapper.h  ops.cpp  ops.h  ppu.cpp  ppu.h  ram.h  sdl_renderer.cpp  sdl_renderer.h  sfml_renderer.cpp  sfml_renderer.h  types.h  utils.h
src/mappers/: 000.cpp  000.h  001.cpp  001.h  004.cpp  004.h  mapper.cpp  mapper.h
src/platform/: openfile_dialog.cpp  openfile_dialog.h  platform_defines.h
src/settings/: serializer.cpp  serializer.h
src/ui/: debug_pages.cpp  debug_pages.h  game_viewport.cpp  game_viewport.h  global.cpp  global.h  imgui.cpp  imgui.h  imgui_cpu.cpp  imgui_cpu.h  imgui_debugger.cpp  imgui_debugger.h  imgui_mem.cpp  imgui_mem.h  imgui_ppu.cpp  imgui_ppu.h  ppu_utils.cpp  ppu_utils.h
tests/: CMakeLists.txt  test_serializer.cpp
